# airflow_training

./: README.md  pyproject.toml  pytest.ini
config/: airflow.cfg
dags/: __init__.py  etl_dummy_operator.py  etl_marketing_analysis_gcp.py  etl_postgresql_operator.py  ex_branch_operator_example.py  ex_industry_sensors_monitoring.py  ex_movie_recommender.py  ex_products_stock_tracking.py  ex_sensor_example_consumer.py  ex_sensor_example_creator.py  ex_social_networks_analysis.py  template_info.py  trigger_rules_dag.py
dags/components/functions/: i_extract.py  i_load.py  i_transform.py
dags/components/functions/extract/: extract_data_functions.py
dags/components/functions/load/: postgresql_loader.py
dags/components/functions/transform/: sales_data_transformer.py
dags/resources/config/: marketing_analysis_gcp_prop.json  properties.json
dags/resources/sql/: 001_check_exists_and_create_table.sql  002_marketing_analysis_gcp.sql
dags/utils/: config_loader.py
docker/: README.md
docker/airflow/: docker-compose-root-output.yaml  exec.md
docker/postgresql/: README.md  docker-compose.yml
docs/: Apache Airflow Introducción a la Orquestación de Flujos de Datos.pdf.crdownload
